Header (part 1 of 3)

--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -14,5 +14,194 @@
 <body>
 
 	<header class="header">
-		
+
+		<div class="header-top">
+			<div class="container">
+				<div class="row flex-nowrap align-items-center justify-content-between">
+
+					<div class="col-auto header-top-adress">
+						<div class="dropdown dropdown-adress">
+							<button type="button" class="btn btn-dropdown" id="dropdownAdressMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Адрес и режим работы</button>
+							<div class="dropdown-menu" aria-labelledby="dropdownAdressMenu">
+								<div class="dropdown-adress-item">
+									<svg class="icon icon-location"><use xlink:href="images/symbol-defs.svg#location"></use></svg>
+									<div class="content">
+										<span>Офис 1</span>
+										<p>г. Москва, ул. Летчика Бабушкина, д 103, кор. 4К, оф. 233</p>
+										<p>Пн.-Пт. — с 9:00 до 21:00; <br> Сб. — с 11:00 до 18:00<br> Вс. — Выходной</p>
+									</div>
+								</div><!-- /.dropdown-adress-item -->
+								<div class="dropdown-adress-item">
+									<svg class="icon icon-location"><use xlink:href="images/symbol-defs.svg#location"></use></svg>
+									<div class="content">
+										<span>Офис 2</span>
+										<p>г. Москва, ул. 8 марта Бабушкина, д 45, оф. 245</p>
+										<p>Пн.-Пт. — с 9:00 до 21:00; <br> Сб. — с 11:00 до 18:00<br> Вс. — Выходной</p>
+									</div>
+								</div><!-- /.dropdown-adress-item -->
+							</div><!-- /.dropdown-menu -->
+						</div><!-- /.dropdown -->
+					</div><!-- /.header-top-adress -->
+
+					<div class="col-auto header-top-btns">
+						<button class="btn btn-yellow btn-sm">
+							<svg class="icon icon-support"><use xlink:href="images/symbol-defs.svg#support"></use></svg>
+							<span>Бесплатная консультация</span>
+						</button>
+						<button class="btn btn-secondary btn-sm">Что с моим заказом?</button>
+					</div><!-- /.header-top-btns -->
+
+					<div class="col-auto header-top-nav">
+						<ul class="menu-list">
+							<li class="has-dropdown">
+								<a href="#">О компании</a>
+								<ul>
+									<li><a href="#">Отзывы</a></li>
+									<li><a href="#">Сертификаты</a></li>
+									<li><a href="#">Наши клиенты</a></li>
+								</ul>
+							</li>
+							<li><a href="#">Доставка</a></li>
+							<li><a href="#">Оплата</a></li>
+							<li class="has-dropdown">
+								<a href="#">Покупателю</a>
+								<ul>
+									<li><a href="#">Отзывы</a></li>
+									<li><a href="#">Сертификаты</a></li>
+									<li><a href="#">Наши клиенты</a></li>
+								</ul>
+							</li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+						<ul class="social-list">
+							<li><a href="#"><img src="images/dist/icons/instagram.png" alt=""></a></li>
+							<li><a href="#"><img src="images/dist/icons/youtube.png" alt=""></a></li>
+						</ul>
+					</div><!-- /.header-top-nav -->
+
+				</div><!-- /.row -->
+			</div><!-- /.container -->
+		</div><!-- /.header-top -->
+
+		<div class="header-middle">
+			<div class="container">
+				<div class="row flex-nowrap align-items-center justify-content-between">
+					<div class="col-auto header-middle-logo">
+						<a href="page-home.html" rel="home">
+							<img src="images/logo.svg" alt="Атоматика для ворот">
+						</a>
+					</div><!-- /.header-middle-logo -->
+					<div class="col-auto header-middle-search">
+						<form class="form form-search">
+							<input type="search" class="form-control" placeholder="Поиск" required>
+							<button type="submit" class="form-submit btn btn-yellow"><svg class="icon icon-search"><use xlink:href="images/symbol-defs.svg#search"></use></svg></button>
+						</form>
+					</div><!-- /.header-middle-search -->
+					<div class="col-auto header-middle-contacts">
+						<div class="phone">
+							<div class="phone-icon">
+								<svg class="icon icon-phone-alt"><use xlink:href="images/symbol-defs.svg#phone-alt"></use></svg>
+							</div>
+							<div class="phone-list">
+								<a href="tel:+74951283027" class="text-xs w-bold">+7 (495) 128-30-27</a>
+								<a href="tel:88005513027" class="text-xs w-bold">8 (800) 551-30-27 <i class="whatsapp"></i><i class="viber"></i></a>
+							</div>
+						</div>
+						<div class="mail">
+							<div class="mail-icon">
+								<svg class="icon icon-mail-alt"><use xlink:href="images/symbol-defs.svg#mail-alt"></use></svg>
+							</div>
+							<div class="mail-list">
+								<a href="mailto:zakaz@avtomatikavorot750.ru" class="text-xs w-bold">zakaz@avtomatikavorot750.ru</a>
+							</div>
+						</div>
+					</div><!-- /.header-middle-contacts -->
+					<div class="col-auto header-middle-actions">
+						<a href="#" class="btn btn-secondary btn-compare">
+							<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
+						</a>
+						<a href="#" class="btn btn-secondary btn-wishlist">
+							<span class="badge">2</span>
+							<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
+						</a>
+						<div class="shopping-cart">
+							<div class="shopping-cart-icon">
+								<a href="#" class="btn btn-secondary btn-shopping-cart">
+									<span class="badge">11</span>
+									<svg class="icon icon-cart"><use xlink:href="images/symbol-defs.svg#cart"></use></svg>
+								</a>
+							</div>
+							<div class="shopping-cart-content">
+								<span class="title">Товаров на сумму</span>
+								<span class="total">2 500 Руб.</span>
+							</div>
+						</div>
+					</div><!-- /.header-middle-actions -->
+				</div><!-- /.row -->
+			</div><!-- /.container -->
+		</div><!-- /.header-middle -->
+
+		<div class="header-bottom">
+			<div class="container">
+				<div class="row flex-nowrap align-items-center">
+					<div class="col-auto header-bottom-catalog">
+						<button class="btn btn-yellow btn-catalog">
+							<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
+							<span>Каталог</span>
+						</button>
+					</div>
+					<div class="col header-bottom-nav">
+						<ul>
+							<li><a href="#" class="promo">Акции и скидки</a></li>
+							<li class="has-dropdown">
+								<a href="#">Автоматика для ворот</a>
+								<div class="megamenu">
+									<div class="container">
+										<div class="row">
+											<div class="col-2"></div>
+										</div>
+										<div class="megamenu-list">
+											<div class="megamenu-item">
+												<div class="image img-fill">
+													<img src="images/dist/menu-categories/1.jpg" alt="Автоматика для откатных ворот">
+												</div>
+												<a href="#" class="category">Автоматика для откатных ворот</a>
+												<ul class="subcategories">
+													<li><a href="#">Комплекты</a></li>
+													<li><a href="#">Приводы</a></li>
+													<li><a href="#">Консольные системы</a></li>
+													<li><a href="#">Зубчатые рейки и крепеж</a></li>
+													<li><a href="#">Аксессуары</a></li>
+												</ul>
+											</div><!-- /.megamenu-item-->
+											<div class="megamenu-item">
+												<img src="images/dist/menu-categories/1.jpg" class="image" alt="Автоматика для распашных ворот">
+												<a href="#" class="category">Автоматика для распашных ворот</a>
+												<ul class="subcategories">
+													<li><a href="#">Комплекты</a></li>
+													<li><a href="#">Приводы</a></li>
+													<li><a href="#">Аксессуары</a></li>
+												</ul>
+											</div><!-- /.megamenu-item-->
+										</div><!-- /.megamenu-list-->
+									</div><!-- /.container -->
+								</div><!-- /.megamenu -->
+							</li>
+							<li class="has-dropdown">
+								<a href="#">Ворота</a>
+							</li>
+							<li class="has-dropdown">
+								<a href="#">Шлагбаумы</a>
+							</li>
+							<li class="has-dropdown">
+								<a href="#">Производители</a>
+							</li>
+							<li><a href="#">Наши работы</a></li>
+							<li><a href="#">Услуги</a></li>
+						</ul>
+					</div>
+				</div><!-- /.row -->
+			</div><!-- /.container -->
+		</div><!-- /.header-bottom -->
+
 	</header>
