Header (part 3 of 3). Styled product card. Working. Home page (sections 4 of 12)

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,15 @@
 
 <main>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-12">Content</div>
-		</div>
-	</div><!-- /.container -->
+	<!--#include virtual="/parts/home/heroes.html" -->
+
+	<!--#include virtual="/parts/home/advantages.html" -->
+
+	<!--#include virtual="/parts/home/questions.html" -->
+
+	<!--#include virtual="/parts/home/popular-categories.html" -->
+	
+	<!--#include virtual="/parts/home/popular-products.html" -->
 
 </main>
 
