--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -97,7 +97,7 @@
 								<input type="text" id="header-search-field" class="form-control" placeholder="Поиск" required autocomplete="off">
 								<label for="header-search-field">Поиск</label>
 							</div>
-							<button type="submit" class="form-submit btn btn-yellow"><svg class="icon icon-search"><use xlink:href="images/symbol-defs.svg#search"></use></svg></button>
+							<button type="submit" class="btn btn-yellow btn-submit"><svg class="icon icon-search"><use xlink:href="images/symbol-defs.svg#search"></use></svg></button>
 						</form>
 						<div class="search-results">
 							<div class="search-results-wrapper">
@@ -114,7 +114,7 @@
 									<span class="products-title mb-8">Товары</span>
 									<div class="products-results">
 										<span>Найдено: 140 товаров</span>
-										<a href="page-search.html">Все результаты поиска <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></a>
+										<a href="page-search.html" class="blue-link">Все результаты поиска <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></a>
 									</div>
 									<ul class="products-list">
 										<li>
