Home page (sections 8 of 12). Code refactoring.

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,14 @@
 	<!--#include virtual="/parts/home/questions.html" -->
 
 	<!--#include virtual="/parts/home/popular-categories.html" -->
-	
+
 	<!--#include virtual="/parts/home/popular-products.html" -->
+
+	<!--#include virtual="/parts/home/new-products.html" -->
+
+	<!--#include virtual="/parts/home/promo-products.html" -->
+
+	<!--#include virtual="/parts/home/partners.html" -->
 
 </main>
 
