--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -114,7 +114,7 @@
 									<span class="products-title mb-8">Товары</span>
 									<div class="products-results">
 										<span>Найдено: 140 товаров</span>
-										<a href="page-search.html" class="blue-link">Все результаты поиска <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></a>
+										<a href="page-search.html" class="link-arrow">Все результаты поиска <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></a>
 									</div>
 									<ul class="products-list">
 										<li>
