--- a/app/parts/home/heroes.html
+++ b/app/parts/home/heroes.html
@@ -21,7 +21,7 @@
 							</div>
 						</div><!-- /.slide -->
 					</div><!-- /.swiper-wrapper -->
-					<div class="h-heroes-slider-nav">
+					<div class="h-heroes-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
 							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
 						</button>
@@ -61,7 +61,7 @@
 							</div>
 						</div><!-- /.slide -->
 					</div><!-- /.swiper-wrapper -->
-					<div class="h-heroes-product-slider-nav">
+					<div class="h-heroes-product-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
 							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
 						</button>
@@ -69,8 +69,8 @@
 							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 					</div><!-- /.h-heroes-product-slider-nav -->
-					<div class="h-heroes-product-slider-dots">
-						<div class="swiper-pagination"></div>
+					<div class="h-heroes-product-slider-dots swiper-dots">
+						<div class="swiper-pagination swiper-pagination--dark"></div>
 					</div><!-- /.h-heroes-product-slider-dots -->
 				</div><!-- /.h-heroes-product-slider -->
 			</div><!-- /.col -->
