--- a/app/parts/home/new-products.html
+++ b/app/parts/home/new-products.html
@@ -1,7 +1,7 @@
 <section class="mt-64">
 	<div class="container">
 		<div class="section-heading">
-			<h2 class="title">Популярные товары</h2>
+			<h2 class="title">Новинки</h2>
 		</div>
 		<div class="products-slider swiper-slider mt-32">
 			<div class="swiper-container">
