Home page (sections 12 of 12). Footer completed.

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,14 @@
 
 	<!--#include virtual="/parts/home/partners.html" -->
 
+	<!--#include virtual="/parts/home/testimonials.html" -->
+
+	<!--#include virtual="/parts/home/articles.html" -->
+
+	<!--#include virtual="/parts/home/trust.html" -->
+
+	<!--#include virtual="/parts/seo-articles/article-1.html" -->
+
 </main>
 
 <!--#include virtual="/parts/footer.html" -->
