--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,4 +1,141 @@
-	<footer></footer>
+	<section class="f-questions section-blue">
+		<div class="container">
+			<h2 class="f-questions-title mb-16 text-lg w-bold text-center">Остались вопросы?</h2>
+			<p class="f-questions-descr mb-32 text-center">Заполните форму ниже, мы вам перезвоним и ответим на все интересующие вопросы</p>
+			<form class="f-questions-form form form-inline">
+				<div class="form-group form-group-label">
+					<input type="text" class="form-control" id="fq-form-name" placeholder="Имя" autocomplete="off" required>
+					<label for="fq-form-name">Имя</label>
+				</div>
+				<div class="form-group">
+					<div class="form-group-label">
+						<input type="tel" class="form-control" id="fq-form-phone" placeholder="+7 (___) ___ __ __" minlength="11" autocomplete="off" required>
+						<label for="fq-form-phone">Телефон</label>
+					</div>
+					<div class="form-checkbox switch-input-mask">
+						<input type="checkbox" id="fq-form-phone-mask" checked>
+						<label for="fq-form-phone-mask" class="form-checkbox-label">Отобразить маску ввода телефона</label>
+					</div>
+				</div>
+				<button type="submit" class="btn btn-lg btn-yellow btn-submit">Позвонить мне</button>
+			</form>
+		</div><!-- /.container -->
+	</section>
+	
+	<footer class="footer">
+		<div class="footer-subscribe">
+			<div class="container">
+				<div class="subscribe">
+					<div class="subscribe-heading">
+						<h4 class="title">Подпишитесь на наши новости!</h4>
+						<p class="descr">Узнавайте первым о скидках, новинках, интересных предложениях!</p>
+					</div>
+					<div class="subscribe-form">
+						<form class="form form-inline">
+							<div class="form-group form-group-label">
+								<input type="email" id="subscribe-email" class="form-control" placeholder="Ваш e-mail" autocomplete="off" required>
+								<label for="subscribe-email">Ваш e-mail</label>
+							</div>
+							<button class="btn btn-lg btn-yellow btn-submit">Подписаться</button>
+						</form>
+					</div>
+				</div>
+			</div><!-- /.container -->
+		</div>
+		<div class="footer-main">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-2">
+						<div class="footer-intro">
+							<div class="logo">
+								<a href="#" rel="home">
+									<img src="images/logo-white.svg" alt="Автоматика для ворот 750">
+								</a>
+								<p class="descr text-xxs">Автоматика для ворот, системы контроля доступа, шлагбаумы, забор, навесы</p>
+							</div>
+							<div class="payments">
+								<div class="payments-title text-xxs">Мы принимаем</div>
+								<img src="images/dist/payments.png" alt="Мы принимаем платежи">
+							</div>
+							<div class="yandex-market">
+								<div class="yandex-market-title text-xxs">Оцените наш магазин<br> в Яндекс маркет</div>
+								<a href="#" target="_blank" rel="nofollow noopener">
+									<img src="images/dist/yandex-market-logo.svg" alt="Яндекс маркет">
+								</a>
+							</div>
+						</div>
+					</div><!-- /.col -->
+					<div class="col-3">
+						<div class="footer-contacts">
+							<div class="footer-title">Контакты</div>
+							<div class="phone">
+								<div>
+									<a href="tel:+74951283027" class="text-xs w-bold">+7 (495) 128-30-27</a>
+								</div>
+								<div>
+									<a href="tel:+78001283027" class="text-xs w-bold">+7 (800) 128-30-27 <i class="whatsapp"></i><i class="viber"></i></a>
+								</div>
+							</div>
+							<div class="email">
+								<div>
+									<a href="mailto:zakaz@avtomatikavorot750.ru">zakaz@avtomatikavorot750.ru</a>
+								</div>
+							</div>
+							<div class="social">
+								<div class="social-title">Мы в социальных сетях</div>
+								<div class="social-list">
+									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-vk"><use xlink:href="images/symbol-defs.svg#vk"></use></svg></a>
+									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-youtube"><use xlink:href="images/symbol-defs.svg#youtube"></use></svg></a>
+									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-instagram"><use xlink:href="images/symbol-defs.svg#instagram"></use></svg></a>
+								</div>
+							</div>
+						</div>
+					</div><!-- /.col -->
+					<div class="col-3">
+						<div class="footer-adress">
+							<div class="footer-title">Адрес и режим работы</div>
+							<p>г. Москва, ул. Летчика Бабушкина, дом 103, кор. 4К, оф. 233</p>
+							<p>Пн.-Пт. с 9:00 до 21:00;<br> Сб. с 11:00 до 18:00<br> Вс. Выходной</p>
+						</div>
+					</div><!-- /.col -->
+					<div class="col-2">
+						<div class="footer-nav">
+							<div class="footer-title">Информация</div>
+							<ul class="footer-nav-list">
+								<li><a href="#">Новости</a></li>
+								<li><a href="#">Статьи</a></li>
+								<li><a href="#">Оплата</a></li>
+								<li><a href="#">Доставка</a></li>
+							</ul>
+						</div>
+					</div><!-- /.col -->
+					<div class="col-2">
+						<div class="footer-nav">
+							<div class="footer-title">Каталог</div>
+							<ul class="footer-nav-list">
+								<li><a href="#">Приводы</a></li>
+								<li><a href="#">Ворота</a></li>
+								<li><a href="#">Автоматика для ворот</a></li>
+								<li><a href="#">Комплектующие</a></li>
+							</ul>
+						</div>
+					</div><!-- /.col -->
+				</div><!-- /.row -->
+			</div><!-- /.container -->
+		</div>
+		<div class="footer-copyright">
+			<div class="copyright-top">
+				<div class="container">
+					<p class="text text-xxs">2008 – 2021 &copy; «Автоматика для ворот 750»</p>
+				</div><!-- /.container -->
+			</div>
+			<div class="copyright-bottom">
+				<div class="container">
+					<p class="text text-xxs">Cайт носит исключительно информационный характер, и ни при каких условиях не является публичной офертой, определяемой положениями статьи 437(2) Гражданского кодекса Российской Федерации. Наличие и цены уточняйте у наших операторов. Копирование всех составляющих частей сайта в какой бы то ни было форме без письменного разрешения владельцев авторских прав запрещено. Сайт использует технологию cookie. Используя сайт, Вы соглашаетесь с правилами использования cookie, а также даете согласие на обработку персональных данных.</p>
+				</div><!-- /.container -->
+			</div>
+		</div>
+	</footer>
 
 	<script src="js/app.min.js"></script>
 
