--- a/app/parts/home/advantages.html
+++ b/app/parts/home/advantages.html
@@ -4,7 +4,7 @@
 		<div class="section-heading">
 			<h1 class="title">Автоматика и комплектующие для ворот</h1>
 		</div>
-		<div class="row row-items mt-32">
+		<div class="row row-items-32 mt-32">
 			<div class="col-3">
 				<div class="h-advantages-item">
 					<figure class="picture">
