--- a/app/parts/home/partners.html
+++ b/app/parts/home/partners.html
@@ -1,3 +1,4 @@
+<!-- Section: Partners -->
 <section class="h-partners section-blue mt-64">
 	<div class="container">
 		<div class="section-heading">
@@ -63,7 +64,7 @@
 			</div><!-- /.h-partners-slider-nav -->
 			<div class="h-partners-slider-dots swiper-dots">
 				<div class="swiper-pagination"></div>
-				<a href="page-search.html" class="link-arrow">Все производители <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+				<a href="#" class="link-arrow">Все производители <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
 			</div><!-- /.h-partners-slider-dots -->
 		</div><!-- /.h-partners-slider -->
 	</div><!-- /.container -->
