--- a/app/parts/home/questions.html
+++ b/app/parts/home/questions.html
@@ -8,7 +8,7 @@
 					<p class="h-questions-descr text-xs">Звоните нам и мы поможем с выбором и ответим на все вопросы</p>
 				</div><!-- /.col -->
 				<div class="col-7">
-					<form class="h-questions-form form">
+					<form class="h-questions-form form form-inline">
 						<div class="form-group form-group-label">
 							<input type="text" class="form-control" id="q-form-name" placeholder="Имя" autocomplete="off" required>
 							<label for="q-form-name">Имя</label>
