Responsive mobile. Code refactoring.

--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -44,8 +44,8 @@
 		</div>
 		<div class="footer-main">
 			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-2">
+				<div class="row row-items-32 justify-content-between">
+					<div class="col-lg-2">
 						<div class="footer-intro">
 							<div class="logo">
 								<a href="#" rel="home">
@@ -65,7 +65,7 @@
 							</div>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-sm-6 col-lg-3">
 						<div class="footer-contacts">
 							<div class="footer-title">Контакты</div>
 							<div class="phone">
@@ -91,14 +91,14 @@
 							</div>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-sm-6 col-lg-3">
 						<div class="footer-adress">
 							<div class="footer-title">Адрес и режим работы</div>
 							<p>г. Москва, ул. Летчика Бабушкина, дом 103, кор. 4К, оф. 233</p>
 							<p>Пн.-Пт. с 9:00 до 21:00;<br> Сб. с 11:00 до 18:00<br> Вс. Выходной</p>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-2">
+					<div class="col-sm-6 col-lg-2">
 						<div class="footer-nav">
 							<div class="footer-title">Информация</div>
 							<ul class="footer-nav-list">
@@ -109,7 +109,7 @@
 							</ul>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-2">
+					<div class="col-sm-6 col-lg-2">
 						<div class="footer-nav">
 							<div class="footer-title">Каталог</div>
 							<ul class="footer-nav-list">
