--- a/app/parts/home/articles.html
+++ b/app/parts/home/articles.html
@@ -1,14 +1,14 @@
 <!-- News & Articles -->
-<div class="h-acrticles mt-64">
+<div class="h-articles mt-64">
 	<div class="container">
 		<div class="nav nav-tabs" role="tablist">
-			<a class="nav-link active" id="nav-acrticles-tab-1" data-toggle="tab" href="#nav-acrticles-1" role="tab" aria-controls="nav-acrticles-1" aria-selected="true">Новости</a>
-			<a class="nav-link" id="nav-acrticles-tab-2" data-toggle="tab" href="#nav-acrticles-2" role="tab" aria-controls="nav-acrticles-2" aria-selected="false">Статьи</a>
+			<a class="nav-link active" id="nav-articles-tab-1" data-toggle="tab" href="#nav-articles-1" role="tab" aria-controls="nav-articles-1" aria-selected="true">Новости</a>
+			<a class="nav-link" id="nav-articles-tab-2" data-toggle="tab" href="#nav-articles-2" role="tab" aria-controls="nav-articles-2" aria-selected="false">Статьи</a>
 		</div><!-- /.nav-tabs -->
 		<div class="tab-content">
-			<div class="tab-pane fade show active" id="nav-acrticles-1" role="tabpanel" aria-labelledby="nav-acrticles-tab-1">
-				<div class="row row-items-32">
-					<div class="col-3">
+			<div class="tab-pane fade show active" id="nav-articles-1" role="tabpanel" aria-labelledby="nav-articles-tab-1">
+				<div class="h-articles-wrapper row row-items-32">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/1.jpg" alt="">
@@ -19,7 +19,7 @@
 							</div>
 						</a>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/2.jpg" alt="">
@@ -30,7 +30,7 @@
 							</div>
 						</a>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/3.jpg" alt="">
@@ -41,7 +41,7 @@
 							</div>
 						</a>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/4.jpg" alt="">
@@ -57,9 +57,9 @@
 					<a href="#" class="link-arrow">Все новости <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
 				</div>
 			</div><!-- /.tab -->
-			<div class="tab-pane fade" id="nav-acrticles-2" role="tabpanel" aria-labelledby="nav-acrticles-tab-2">
-				<div class="row row-items-32">
-					<div class="col-3">
+			<div class="tab-pane fade" id="nav-articles-2" role="tabpanel" aria-labelledby="nav-articles-tab-2">
+				<div class="h-articles-wrapper row row-items-32">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/2.jpg" alt="">
@@ -70,7 +70,7 @@
 							</div>
 						</a>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/4.jpg" alt="">
@@ -81,7 +81,7 @@
 							</div>
 						</a>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/1.jpg" alt="">
@@ -92,7 +92,7 @@
 							</div>
 						</a>
 					</div><!-- /.col -->
-					<div class="col-3">
+					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="images/dist/articles/3.jpg" alt="">
