--- a/app/parts/home/heroes.html
+++ b/app/parts/home/heroes.html
@@ -2,21 +2,21 @@
 <div class="h-heroes">
 	<div class="container">
 		<div class="row">
-			<div class="col-9">
+			<div class="col-lg">
 				<div class="h-heroes-slider swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="h-heroes-photo">
+							<div class="h-heroes-slider-photo img-cover">
 								<img src="images/dist/home-slider-photo-1.jpg" alt="">
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="h-heroes-photo">
+							<div class="h-heroes-slider-photo img-cover">
 								<img src="images/dist/home-slider-photo-1.jpg" alt="">
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
-							<div class="h-heroes-photo">
+							<div class="h-heroes-slider-photo img-cover">
 								<img src="images/dist/home-slider-photo-1.jpg" alt="">
 							</div>
 						</div><!-- /.slide -->
@@ -31,7 +31,7 @@
 					</div><!-- /.h-heroes-slider-nav -->
 				</div><!-- /.h-heroes-slider -->
 			</div><!-- /.col -->
-			<div class="col-3">
+			<div class="col-lg-auto">
 				<div class="h-heroes-product-slider swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
