--- a/app/parts/home/questions.html
+++ b/app/parts/home/questions.html
@@ -3,11 +3,11 @@
 	<div class="container">
 		<div class="h-questions-inner">
 			<div class="row">
-				<div class="col-5">
+				<div class="col-xl-4 col-xxl-5">
 					<h3 class="h-questions-title text-md w-bold">Есть вопросы?</h3>
 					<p class="h-questions-descr text-xs">Звоните нам и мы поможем с выбором и ответим на все вопросы</p>
 				</div><!-- /.col -->
-				<div class="col-7">
+				<div class="col-xl-8 col-xxl-7">
 					<form class="h-questions-form form form-inline">
 						<div class="form-group form-group-label">
 							<input type="text" class="form-control" id="q-form-name" placeholder="Имя" autocomplete="off" required>
