--- a/app/parts/home/trust.html
+++ b/app/parts/home/trust.html
@@ -5,37 +5,37 @@
 			<div class="h-trust-col">
 				<h2 class="h-trust-title mb-32 text-lg w-bold">Наши клиенты</h2>
 				<div class="h-trust-clients">
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/1.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/2.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/3.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/4.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/5.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/6.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/7.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/8.jpg" alt="">
 					</div>
-					<div class="h-trust-clients-item">
+					<div class="h-trust-clients-item img-scale">
 						<img src="images/dist/partners/9.jpg" alt="">
 					</div>
 				</div>
 			</div><!-- /.h-trust-col  -->
 			<div class="h-trust-col">
-				<h2 class="h-trust-title mb-32 text-lg w-bold">Наши клиенты</h2>
+				<h2 class="h-trust-title mb-32 text-lg w-bold">Сертификаты</h2>
 				<div class="h-trust-certificates">
 					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
