--- a/app/parts/seo-articles/article-1.html
+++ b/app/parts/seo-articles/article-1.html
@@ -1,7 +1,7 @@
 <section class="seo-article mt-64">
 	<div class="container">
 		<div class="row justify-content-center">
-			<article class="col-8">
+			<article class="col-lg-10 col-xxl-8">
 				<h2>750 Автоматика для ворот — интернет магазин систем безопасности и автоматики</h2>
 				<p><a href="#">Наша компания</a> имеет за плечами <b>солидный опыт в продажах</b>, установке и обслуживании самого разнообразного оборудования для видеонаблюдения. Наши специалисты всегда готовы оказать клиентам всестороннюю помощь в выборе оптимальной техники под конкретные запросы. Камеры видеонаблюдения, турникеты, шлагбаумы, автоматика ворот — у нас вы можете <u>заказать установку</u> и монтаж самых разнообразных устройств. К каждому заказу мы подходим индивидуально, учитывая все требования и пожелания клиента.</p>
 				<ul>
