--- a/app/parts/home/popular-categories.html
+++ b/app/parts/home/popular-categories.html
@@ -5,7 +5,7 @@
 			<h2 class="title">Популярные категории</h2>
 		</div>
 		<div class="row mt-32">
-			<div class="col-3">
+			<div class="col-6 col-lg-3">
 				<div class="h-categories-item h-categories-item--md">
 					<a href="#" class="permalink"></a>
 					<div class="heading">
@@ -33,7 +33,7 @@
 					</div>
 				</div><!-- /.h-categories-item -->
 			</div><!-- /.col -->
-			<div class="col-3">
+			<div class="col-6 col-lg-3">
 				<div class="h-categories-item h-categories-item--sm">
 					<a href="#" class="permalink"></a>
 					<div class="heading heading--bottom">
@@ -61,7 +61,7 @@
 					</div>
 				</div><!-- /.h-categories-item -->
 			</div><!-- /.col -->
-			<div class="col-3">
+			<div class="col-6 col-lg-3">
 				<div class="h-categories-item h-categories-item--md">
 					<a href="#" class="permalink"></a>
 					<div class="heading">
@@ -89,7 +89,7 @@
 					</div>
 				</div><!-- /.h-categories-item -->
 			</div><!-- /.col -->
-			<div class="col-3">
+			<div class="col-6 col-lg-3">
 				<div class="h-categories-item h-categories-item--sm">
 					<a href="#" class="permalink"></a>
 					<div class="heading">
