--- a/app/parts/home/testimonials.html
+++ b/app/parts/home/testimonials.html
@@ -9,7 +9,7 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div class="card card-testimonial">
-							<div class="card-meta">
+							<div class="card-heading">
 								<div class="rating">
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
@@ -17,7 +17,10 @@
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 								</div>
-								<div class="name">Сергей</div>
+								<div class="date">16 января 2020</div>
+							</div>
+							<div class="card-meta">
+								<div class="name">Ольга</div>
 								<div class="text">
 									<p>В прошлом году мы с мужем долго выбирали себе привод для наших откатных ворот. Взяли в итоге Найс. Первую (и последнюю) зиму с этим приводом я не забуду никогда. Пару раз он отказался выпускать меня утром на работу – пришлось искать ключи, разблокировать и открывать ворота вручную. После третьего раза и от страха, что в следующий раз привод заклинит вечером и придется лезть через забор чтобы попасть во двор, убедила мужа заменить на что-нибудь более устойчивое к русской зиме.</p>
 								</div>
@@ -26,7 +29,7 @@
 					</div><!-- /.slide -->
 					<div class="swiper-slide">
 						<div class="card card-testimonial">
-							<div class="card-meta">
+							<div class="card-heading">
 								<div class="rating">
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
@@ -34,6 +37,9 @@
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 								</div>
+								<div class="date">20 мая 2020</div>
+							</div>
+							<div class="card-meta">
 								<div class="name">Иван</div>
 								<div class="text">
 									<p>Пару раз он отказался выпускать меня утром на работу – пришлось искать ключи, разблокировать и открывать ворота вручную. После третьего раза и от страха, что в следующий раз привод заклинит вечером и придется лезть через забор чтобы попасть во двор, убедила мужа заменить на что-нибудь более устойчивое к русской зиме.</p>
@@ -43,15 +49,18 @@
 					</div><!-- /.slide -->
 					<div class="swiper-slide">
 						<div class="card card-testimonial">
-							<div class="card-meta">
+							<div class="card-heading">
 								<div class="rating">
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 									<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
 								</div>
-								<div class="name">Виталий</div>
+								<div class="date">9 октября 2020</div>
+							</div>
+							<div class="card-meta">
+								<div class="name">Мария</div>
 								<div class="text">
 									<p>После третьего раза и от страха, что в следующий раз привод заклинит вечером и придется лезть через забор чтобы попасть во двор, убедила мужа заменить на что-нибудь более устойчивое к русской зиме.</p>
 								</div>
