--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -137,6 +137,8 @@
 		</div>
 	</footer>
 
+	<!--#include virtual="/parts/mobile-menu.html" -->
+
 	<script src="js/app.min.js"></script>
 
 </body>
