--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -74,8 +74,8 @@
 							<li><a href="#">Контакты</a></li>
 						</ul>
 						<ul class="social-list">
-							<li><a href="#"><img src="images/dist/icons/instagram.png" alt=""></a></li>
-							<li><a href="#"><img src="images/dist/icons/youtube.png" alt=""></a></li>
+							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/instagram.svg" alt=""></a></li>
+							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/youtube.svg" alt=""></a></li>
 						</ul>
 					</div><!-- /.header-top-nav -->
 
@@ -101,7 +101,7 @@
 
 					<div class="col header-middle-search">
 						<div class="heading">
-							<span class="heading-title">Поиск</span>
+							<span class="heading-title text-lg w-bold">Поиск</span>
 							<button class="heading-btn btn btn-close">
 								<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
 							</button>
